--- a/server/package.json
+++ b/server/package.json
@@ -11,16 +11,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^2.19.2",
+    "apollo-server-express": "^2.22.2",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "graphql": "^15.5.0",
+    "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^5.11.14",
-    "nodemailer": "^6.4.17",
+    "nodemailer": "^6.5.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "concurrently": "^6.0.0",
     "nodemon": "^2.0.3"
   }
 }
